force-app/main/default/objects/Stripe_Payment_Received__c/Stripe_Payment_Received__c.object-meta.xml
<CustomObject>
    <description>Audit of every Stripe webhook event for a payment - succeeded, failed, cancelled, refunded, retried. One record per Stripe event id, linked to the parent Stripe Payment.</description>
    <label>Stripe Payment Received</label>
    <nameField>
        <displayFormat>SP-RCV-{000000}</displayFormat>
        <label>Received Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Payments Received</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>