force-app/main/default/objects/Stripe_Payment_Received__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <label>Amount Received</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>