force-app/main/default/objects/Stripe_Payment_Received__c/fields/Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Charge_Id__c</fullName>
    <label>Charge Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>