force-app/main/default/objects/Stripe_Payment_Received__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>