force-app/main/default/objects/Stripe_Payment_Received__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Payment</label>
    <referenceTo>Stripe_Payment__c</referenceTo>
    <relationshipLabel>Payments Received</relationshipLabel>
    <relationshipName>Payments_Received</relationshipName>
    <type>Lookup</type>
</CustomField>