force-app/main/default/objects/Stripe_Payment_Received__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <label>Raw API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>