force-app/main/default/objects/Stripe_Payment_Received__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <label>Received Date</label>
    <type>DateTime</type>
</CustomField>