force-app/main/default/objects/Stripe_Payment_Received__c/fields/Signature_Verified__c.field-meta.xml
<CustomField>
    <fullName>Signature_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Verified</label>
    <type>Checkbox</type>
</CustomField>