force-app/main/default/objects/Stripe_Payment_Received__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set for received events tied to a subscription (renewals, first charge) so the full payment trail is visible on the subscription record.</description>
    <label>Stripe Subscription</label>
    <referenceTo>Stripe_Subscription__c</referenceTo>
    <relationshipLabel>Payments Received</relationshipLabel>
    <relationshipName>Payments_Received</relationshipName>
    <type>Lookup</type>
</CustomField>