force-app/main/default/objects/Stripe_Payment_Received__c/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <description>Stripe subscription id this received row belongs to (renewals/first charge). Used to link the row to the Stripe_Subscription__c record even when the event arrives before that record exists.</description>
    <label>Stripe Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>